@@ -17,8 +17,24 @@
     <module>client</module>
     <module>guiclient</module>
     <module>generator</module>
+      <module>generator.test</module>
+      <module>fxclient</module>
   </modules>
 
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>org.junit.jupiter</groupId>
+                <artifactId>junit-jupiter</artifactId>
+                <version>5.8.0-M1</version>
+            </dependency>
+            <dependency>
+                <groupId>org.junit.jupiter</groupId>
+                <artifactId>junit-jupiter-api</artifactId>
+                <version>5.8.0-M1</version>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
   <build>
     <pluginManagement>
         <plugins>
@@ -35,7 +51,17 @@
             </plugin>
         </plugins>
     </pluginManagement>
-
+      <plugins>
+          <plugin>
+              <groupId>org.apache.maven.plugins</groupId>
+              <artifactId>maven-compiler-plugin</artifactId>
+              <configuration>
+                  <source>16</source>
+                  <target>16</target>
+                  <compilerArgs>--enable-preview</compilerArgs>
+              </configuration>
+          </plugin>
+      </plugins>
   </build>
 </project>
 
